<resources>
    //Home Screen Activity
    <string name="app_name">Camera Cookbook</string>
    <string name="image_picker_error">Error uploading image</string>
    <string name="loading_message">Loading Results...</string>
    <string name="camera">Camera</string>
    <string name="selectImage">Select Image</string>
    <string name="browseRecipes">Recipes</string>
    <string name="addToCookbook">Add To Cookbook</string>

    //Add Ingredient Activity
    <string name="addIngredientTitle">Add Ingredient</string>
    <string name="ingredientName">Ingredient Name</string>
    <string name="cuisineName">Cuisine</string>
    <string name="cuisinePrompt">Select a Cuisine</string>
    <string name="useFrequency">Use Frequency</string>
    <string name="useFrequencyHigh">High</string>
    <string name="useFrequencyLow">Low</string>
    <string name="cameraBtnTxt">Camera</string>
    <string name="pickImgBtnTxt">Pick Image</string>
    <string name="saveBtnTxt">Save</string>

    //Browse Recipe Activity
    <string name="searchRecipe">Search Recipe</string>


    //String query urls
    <string name="findByIngredientsURL"> https://spoonacular-recipe-food-nutrition-v1.p.mashape.com/recipes/findByIngredients?</string>
    <string name="findByRecipeNameURL"></string>

    //Cuisines
    <string-array name="cuisine_array">
        <item>Indian</item>
        <item>South Indian</item>
        <item>Chinese</item>
        <item>Italian</item>
    </string-array>
</resources>
