<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sushrut.recipedemo.IngredientLibraryActivity"
    android:orientation="vertical">

    <android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.sushrut.recipedemo.IngredientLibraryActivity"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/ingredientNameTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:text="@string/ingredientName" />

        <EditText
            android:id="@+id/ingredientNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

        </android.widget.LinearLayout>
    <android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.sushrut.recipedemo.IngredientLibraryActivity"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/cuisineTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.51"
            android:layout_marginLeft="20dp"
            android:text="@string/cuisineName" />

        <EditText
            android:id="@+id/cuisineTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"
            android:ems="10"
            android:inputType="textPersonName" />

    </android.widget.LinearLayout>
    <android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.sushrut.recipedemo.IngredientLibraryActivity"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/useFrequencyTxtView"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:text="@string/useFrequency"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/lowFrequencyRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/useFrequencyLow"/>
            <RadioButton
                android:id="@+id/highFrequencyRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/useFrequencyHigh"/>
        </RadioGroup>
    </android.widget.LinearLayout>
    <android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.sushrut.recipedemo.IngredientLibraryActivity"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/cameraBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cameraBtnTxt" />

        <Button
            android:id="@+id/pickImgBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickImgBtnTxt"/>
    </android.widget.LinearLayout>
    <android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.sushrut.recipedemo.IngredientLibraryActivity"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/ingredientImgView"
            android:layout_width="wrap_content"
            android:layout_height="144dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_weight="0.62" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveBtnTxt"/>
    </android.widget.LinearLayout>

</android.widget.LinearLayout>
